#9 About box adjusted (site, team copyright)